extends Node

@onready var arrowshoot1_player = $ArrowShoot1
@onready var iceshoot1_player = $IceShoot1
@onready var poisonshoot1_player = $PoisonShoot1
@onready var buttonpress1_player = $ButtonPress1
@onready var buildsound1_player = $BuildSound1
@onready var hitsound1_player = $BaseHit1
@onready var winsound1_player = $WinSound1
@onready var wavesound1_player = $WaveStart1
@onready var basedie1_player = $BaseDie1
@onready var batdie1_player = $BatDie1
@onready var slimedie1_player = $SlimeDie1
@onready var demondie1_player = $DemonDie1
@onready var ghostdie1_player = $GhostDie1
